# mcp-personal

./: .gitignore  CHANGELOG.md  CLAUDE.md  DID_YOU_MEAN_IMPLEMENTATION_PLAN.md  FUZZY_SEARCH_IMPROVEMENTS.md  MCP_FUZZY_SEARCH_PDF_ANALYSIS.md  Makefile  PR-1-analysis.md  README.md  README_SQLITE.md  REMOVE_REGEX_PATTERN_PLAN.md  RG_FLAGS_RELEVANCE.md  WINDOWS_SUPPORT.md  debug_pdf_test_windows.py  debug_windows_mock.py  mcp_fd_server.py  mcp_fuzzy_search.py  mcp_sqlite_server.py  pdf-fuzzy-search-mcp-spec.md  pyproject.toml  windebug-tmux.sh  windows-test-fixes-postmortem.md
.claude/agents/: docs-updater.md  git-commit-creator.md
.github/workflows/: ci.yml
tests/: README.md  conftest.py  test_cli.py  test_fd_server.py  test_fuzzy_search.py  test_fuzzy_search.py.bak  test_simple.py  test_sqlite_server.py
