[project]
name = "mcp-personal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "anyio==4.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "anyio==4.9.0",
]
