[project]
name = "mcp-personal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "anyio==4.9.0",
    "ruff>=0.12.0",
]
pdf = [
    "PyMuPDF>=1.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "anyio==4.9.0",
    "ruff>=0.12.0",
    "pyright>=1.1.402",
    "PyMuPDF>=1.23.0",
    "ty>=0.0.1a16",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
